Merged in feature/PAT-388/awarded-contract-summary-diffing (pull request #202)
feature/PAT-388/implement awarded contract section summary diffing

* Implement awarded contract section summary diffing

* Fix contract function not being displayed correctly on the non diffed awarded contract summary page
Remove showTag params from awarded contract summary macros
Set multiLineTextBlockClass default to govuk-body on all diffing macros
Verify ignoreFieldNames contains summaryLinks in AwardedContractSectionSummaryServiceTest diffService verify call

Approved-by: Daniel Ashworth
Approved-by: Lewis McKeown